if navigationHelper#getResource doesn't find a resource in the theme, tryp finding a similar file with different extension